mais desafios e um projeto futuro

--- a/Desafio4/index.html
+++ b/Desafio4/index.html
@@ -10,7 +10,7 @@
     <h1>Criar conta</h1>
 
     <div>
-        <input type="text" placeholder="Email" id="email"><br>
+        <input type="text" placeholder="Email" id="email" onblur="validarE()"><br>
         <h2 id ="sitE"></h2>
         <input type="text" placeholder="Senha" id="senha"><br>
         <h2 id = "sitS"></h2>
@@ -19,6 +19,6 @@
         <button id="botao" disabled>Criar conta</button>
     </div>
 
-    <script src="logic.js"></script>
+    <script src="logic2.js"></script>
 </body>
 </html>
